separando la vista y la administracion

--- a/app/Resources/MWSimpleCrudGeneratorBundle/views/frontend.html.twig
+++ b/app/Resources/MWSimpleCrudGeneratorBundle/views/frontend.html.twig
@@ -36,7 +36,7 @@
 
 <body class="header">
 		{% block menu %}
-	           {% include "::menuBackend.html.twig" %}       
+	        {% include "::menuFrontend.html.twig" %}    
 		{% endblock %}
 <div class="container">
 
@@ -59,7 +59,7 @@
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/jquery.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/select2.min.js') }}"></script>
-<script src="{{ asset('bundles/mwsimplecrudgenerator/js/angular.min.js') }}"></script>
+
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/material.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/es.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/moment.min.js') }}"></script>
