--- a/src/Home/FrontendBundle/Resources/views/Disposicion/index.html.twig
+++ b/src/Home/FrontendBundle/Resources/views/Disposicion/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MWSimpleCrudGeneratorBundle::layout.html.twig' %}
+{% extends 'MWSimpleCrudGeneratorBundle::frontend.html.twig' %}
 
 {% block title %}
 {{ parent() }} - {{ 'views.index.list'|trans({'%entity%': 'Disposicion'}, 'MWSimpleCrudGeneratorBundle') }}
