--- a/app/Resources/MWSimpleCrudGeneratorBundle/views/layout.html.twig
+++ b/app/Resources/MWSimpleCrudGeneratorBundle/views/layout.html.twig
@@ -60,6 +60,7 @@
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/select2.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/angular.min.js') }}"></script>
+<script src="{{ asset('bundles/mwsimplecrudgenerator/js/app.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/material.min.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/es.js') }}"></script>
 <script src="{{ asset('bundles/mwsimplecrudgenerator/js/moment.min.js') }}"></script>
