--- a/src/Home/BackendBundle/Resources/views/Disposicion/new.html.twig
+++ b/src/Home/BackendBundle/Resources/views/Disposicion/new.html.twig
@@ -6,127 +6,133 @@
 
 {% block page %}
     {% form_theme form 'MWSimpleCrudGeneratorBundle:widget:fields.html.twig' %}
-    <div class="panel panel-default center-block">
-        <div class="panel-heading">
-            <h3 class="panel-title center-block">
-                {{ 'views.new.creation'|trans({'%entity%': 'Disposicion'}, 'MWSimpleCrudGeneratorBundle') }}
-            </h3>
-        </div>
-            
-        <div class="panel-body">
-    {# {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }} #}
-    {{ form_start(form) }}
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.gestion,'Gestion') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.gestion) }}
-
-                 </div>
-                 <div class="col-md-5">
-                      {{ form_errors(form.gestion) }}
-                 </div>
+<div ng-app="app">       
+        <div class="panel panel-default center-block">
+            <div class="panel-heading">
+                <h3 class="panel-title center-block">
+                    {{ 'views.new.creation'|trans({'%entity%': 'Disposicion'}, 'MWSimpleCrudGeneratorBundle') }}
+                </h3>
             </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.tema,'Tematica') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.tema) }}
-                 </div>
-                <div class="col-md-5">
-                     {{ form_errors(form.tema) }} 
+                
+            <div class="panel-body">
+        {# {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }} #}
+
+        {{ form_start(form) }}
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.gestion,'Gestion') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.gestion) }}
+
+                     </div>
+                     <div class="col-md-5">
+                          {{ form_errors(form.gestion) }}
+                     </div>
                 </div>
-            </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.oficina,'Oficina') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.oficina) }}
-                 </div>
-                 <div class="col-md-5">
-                     {{ form_errors(form.oficina) }}
-                 </div>
-            </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.fecha,'Fecha') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.fecha) }}
-                 </div>
-                 <div class="col-md-5">
-                     {{ form_errors(form.fecha) }}
-                 </div>
-            </div>
-             <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.numero,'Número') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.numero) }}
-                 </div>
-                 <div class="col-md-5">
-                     {{ form_errors(form.numero) }}
-                 </div>
-            </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.descripcion,'Descripcion') }}
-                 </div>
-                 <div class="col-md-4">
-                     {{ form_widget(form.descripcion) }}
-                 </div class="col-md-5">  
-                    {{ form_errors(form.descripcion) }}
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.tema,'Tematica') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.tema) }}
+                     </div>
+                    <div class="col-md-5">
+                         {{ form_errors(form.tema) }} 
+                    </div>
                 </div>
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.oficina,'Oficina') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.oficina) }}
+                     </div>
+                    
+                     <div class="col-md-5">
+                         {{ form_errors(form.oficina) }}
+                     </div>
+                </div>
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.fecha,'Fecha') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.fecha) }}
+                     </div>
+                     <div class="col-md-5">
+                         {{ form_errors(form.fecha) }}
+                     </div>
+                </div>
+                 <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.numero,'Número') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.numero,{ 'attr': {'data-ng-model': 'foo'} }) }}
+                     </div>
+                      <p>[[ foo ]]</p>
+                    {# <span data-ng-show="home_backendbundle_disposicion.foo.$error.number">ingresar solo numeros</span> #}
+                     <div class="col-md-5">
+                         {{ form_errors(form.numero) }}
+                     </div>
+                </div>
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.descripcion,'Descripcion') }}
+                     </div>
+                     <div class="col-md-4">
+                         {{ form_widget(form.descripcion) }}
+                     </div class="col-md-5">  
+                        {{ form_errors(form.descripcion) }}
+                    </div>
+                </div>
+                 <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.estado,'¿Desea hacer pública esta disposición?') }}
+                     </div>
+                     <div class="col-md-9">
+                         {{ form_widget(form.estado) }}                  
+                     </div>
+                     <div class="col-md-5">
+                         {{ form_errors(form.estado) }}
+                     </div>
+                </div>
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.file.name,'nombre') }}
+                     </div>
+                     <div class="col-md-9">
+                         {{ form_widget(form.file.name) }}                  
+                     </div>
+                     <div class="col-md-5">
+                        {{ form_errors(form.file.name) }}
+                     </div>
+                </div>
+                <div class="row">
+                     <div class="col-md-3">
+                         {{ form_label(form.file.file,'archivo') }}
+                     </div>
+                     <div class="col-md-9">
+                         {{ form_widget(form.file.file) }}                  
+                     </div>
+                     <div class="col-md-5">
+                        {{ form_errors(form.file.file) }}
+                     </div>
+                </div>
+                {{ form_rest(form) }}
             </div>
-             <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.estado,'¿Desea hacer pública esta disposición?') }}
-                 </div>
-                 <div class="col-md-9">
-                     {{ form_widget(form.estado) }}                  
-                 </div>
-                 <div class="col-md-5">
-                     {{ form_errors(form.estado) }}
-                 </div>
+
+
             </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.file.name,'nombre') }}
-                 </div>
-                 <div class="col-md-9">
-                     {{ form_widget(form.file.name) }}                  
-                 </div>
-                 <div class="col-md-5">
-                    {{ form_errors(form.file.name) }}
-                 </div>
-            </div>
-            <div class="row">
-                 <div class="col-md-3">
-                     {{ form_label(form.file.file,'archivo') }}
-                 </div>
-                 <div class="col-md-9">
-                     {{ form_widget(form.file.file) }}                  
-                 </div>
-                 <div class="col-md-5">
-                    {{ form_errors(form.file.file) }}
-                 </div>
-            </div>
-            {{ form_rest(form) }}
         </div>
 
-
+            <div class="col-lg-9">
+        <div class="float-left col-lg-3">
+            <a class="btn btn-info col-lg-11" href="{{ path('admin_disposicion') }}">
+                {{ 'views.recordactions.backtothelist'|trans({}, 'MWSimpleCrudGeneratorBundle') }}
+            </a>
         </div>
-    </div>
-
-        <div class="col-lg-9">
-    <div class="float-left col-lg-3">
-        <a class="btn btn-info col-lg-11" href="{{ path('admin_disposicion') }}">
-            {{ 'views.recordactions.backtothelist'|trans({}, 'MWSimpleCrudGeneratorBundle') }}
-        </a>
     </div>
 </div>
 {% endblock %}
