--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -9,8 +9,8 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
         <div class="row-fluid panel" style="background-color: rgba(245, 245, 245, 0.7);" align="center" >
-        <h2>Sitema de Gestion<br>
-        de disposiciones de la Provoncia del Chaco</h2>
+        <h2>Sistema de Gestión<br>
+        de disposiciones de la Provincia del Chaco</h2>
             <div class="span5 offset4">
                 {% if error %}
                   <div class="alert-error">
