--- a/app/Resources/MWSimpleCrudGeneratorBundle/views/layout.html.twig
+++ b/app/Resources/MWSimpleCrudGeneratorBundle/views/layout.html.twig
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{{ 'views.layout.bannersadmin'|trans({}, 'MWSimpleCrudGeneratorBundle') }}{% endblock %}</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Aguirre Facundo">
 
     <!-- Le styles -->
 
