--- a/app/Resources/MWSimpleCrudGeneratorBundle/views/frontend.html.twig
+++ b/app/Resources/MWSimpleCrudGeneratorBundle/views/frontend.html.twig
@@ -5,8 +5,7 @@
     <title>{% block title %}{{ 'views.layout.bannersadmin'|trans({}, 'MWSimpleCrudGeneratorBundle') }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="author" content="Aguirre Facundo">
     <!-- Le styles -->
 
     <!-- Twitter Bootstrap -->
