--- a/src/Home/BackendBundle/Resources/views/Disposicion/index.html.twig
+++ b/src/Home/BackendBundle/Resources/views/Disposicion/index.html.twig
@@ -57,7 +57,7 @@
                     <td> Caracter </td>
                     <th {% if entities.isSorted('a.Fecha') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'Fecha', 'a.fecha') }}</th>
                     <th class="sorted"> Tema </th>
-                    <th{% if entities.isSorted('a.Descripcion') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'Descripcion', 'a.descripcion') }}</th>
+                    {# <th{% if entities.isSorted('a.Descripcion') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'Descripcion', 'a.descripcion') }}</th> #}
                     <th> Archivos </th>
                 </tr>
             </thead>
@@ -69,7 +69,7 @@
                     <td>{{ entity.numero }}</td>
                     <td>{{ entity.oficina }}</td>
                     <td> 
-                        {% if entity.estado == null%}
+                        {% if entity.estado == 1%}
                             <p style="color: green"> Público </p>
                         {% else %}
                             <p style="color: red"> Privado </p>
@@ -77,7 +77,7 @@
                     </td>
                     <td>{% if entity.fecha %}{{ entity.fecha|date('d-m-Y') }}{% endif %}</td>
                     <td>{{ entity.tema }}</td>
-                    <td>{{ entity.descripcion }}</td>
+                    {# <td>{{ entity.descripcion }}</td> #}
                     <td>
                     <div class="row">
                         <div class="col-md-2">
@@ -133,10 +133,16 @@ $('.tooltips').tooltip();
 });
 </script>
 <script type="text/javascript">
-    $('#home_backendbundle_disposicionfiltertype_fecha_left_date').bootstrapMaterialDatePicker();
+    $('#home_backendbundle_disposicionfiltertype_fecha_left_date').bootstrapMaterialDatePicker({
+        lang: "es",
+        weekStart : 0, 
+        time: false});
 </script>
 <script type="text/javascript">
-    $('#home_backendbundle_disposicionfiltertype_fecha_right_date').bootstrapMaterialDatePicker();
+    $('#home_backendbundle_disposicionfiltertype_fecha_right_date').bootstrapMaterialDatePicker({
+        lang: "es",
+        weekStart : 0, 
+        time: false });
 </script>
 
 
